[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/level_1.gd" type="Script" id=2]
[ext_resource path="res://tiles.tres" type="TileSet" id=3]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level parts/spawn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level parts/air_spawn.tscn" type="PackedScene" id=7]

[node name="level_1" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 152.718
margin_top = 21.7839
margin_right = 540.718
margin_bottom = 35.7839
text = "WASD to Move     Mouse to Aim and Left Click or Shift to Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131048, 2, 65539, -65512, 2, 65539, 24, 2, 65539, 65560, 2, 65539, 131096, 2, 65539, 196632, 2, 65539, 196648, 2, 65539, 262168, 2, 65539, 262184, 2, 65539, 327704, 2, 65539, 327720, 2, 65539, 393240, 2, 65539, 393254, 2, 0, 393255, 2, 1, 393256, 2, 131074, 458776, 2, 65539, 458790, 2, 65539, 524297, 5, 0, 524298, 5, 1, 524299, 5, 1, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524315, 5, 0, 524316, 5, 0, 524317, 5, 0, 524318, 5, 0, 524319, 5, 0, 524320, 5, 0, 524321, 5, 0, 524322, 5, 0, 524323, 5, 0, 524324, 5, 0, 524325, 5, 0, 524326, 5, 1, 524327, 5, 1, 524328, 5, 0, 655352, 3, 1, 655353, 3, 65538, 655354, 3, 1, 655355, 3, 1, 655356, 3, 131073, 655357, 3, 1, 655358, 3, 1, 655359, 3, 1, 589824, 3, 131073, 589825, 3, 65538, 589826, 3, 131073, 589827, 3, 131073, 589828, 3, 131073, 589829, 3, 3, 589833, 5, 0, 589834, 4, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589851, 5, 0, 589852, 5, 0, 589853, 5, 0, 589854, 5, 0, 589855, 5, 0, 589856, 5, 0, 589857, 5, 0, 589858, 5, 0, 589859, 5, 0, 589860, 5, 0, 589861, 5, 0, 589862, 4, 0, 589864, 5, 0, 720889, 3, 65536, 655361, 3, 65536, 655365, 3, 131072, 655366, 3, 3, 655369, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655389, 5, 0, 655390, 5, 0, 655391, 5, 0, 655392, 5, 0, 655393, 5, 0, 655394, 5, 0, 655395, 5, 0, 655396, 5, 0, 655397, 5, 0, 655400, 5, 0, 786425, 3, 65536, 720896, 3, 0, 720897, 3, 131074, 720902, 3, 131072, 720903, 3, 3, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720926, 5, 0, 720927, 5, 0, 720928, 5, 0, 720929, 5, 0, 720930, 5, 0, 720931, 5, 0, 720932, 5, 0, 720933, 5, 0, 720934, 5, 0, 720935, 5, 0, 720936, 5, 0, 851961, 3, 131072, 851962, 3, 1, 851963, 3, 131073, 851964, 3, 131073, 851965, 3, 131073, 851966, 3, 131073, 851967, 3, 1, 786432, 3, 131074, 786439, 3, 65536, 786441, 5, 0, 786442, 5, 0, 786443, 5, 0, 786444, 5, 0, 786445, 5, 0, 786446, 5, 0, 786447, 5, 0, 786448, 5, 0, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 786458, 5, 0, 786459, 5, 0, 786460, 5, 0, 786461, 5, 0, 786462, 5, 0, 786463, 5, 0, 786464, 5, 0, 786465, 5, 0, 786466, 5, 0, 786467, 5, 0, 786468, 5, 0, 786469, 5, 0, 786470, 5, 0, 786471, 5, 0, 786472, 5, 0, 851975, 3, 65537, 851976, 3, 1, 851977, 5, 0, 851978, 5, 0, 851979, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 851983, 5, 0, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 851994, 5, 0, 851995, 5, 0, 851996, 5, 0, 851997, 5, 0, 851998, 5, 0, 851999, 5, 0, 852000, 5, 0, 852001, 5, 0, 852002, 5, 0, 852003, 5, 0, 852004, 5, 0, 852005, 5, 0, 852006, 5, 0, 852007, 5, 0, 852008, 5, 0, 852009, 3, 1, 852010, 3, 1, 852011, 3, 131073, 852012, 3, 1, 852013, 3, 1, 852014, 3, 1, 852015, 3, 131073, 852016, 3, 1, 852017, 3, 1, 852018, 3, 1, 852019, 3, 3, 917511, 3, 65536, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 917530, 5, 0, 917531, 5, 0, 917532, 5, 0, 917533, 5, 0, 917534, 5, 0, 917535, 5, 0, 917536, 5, 0, 917537, 5, 0, 917538, 5, 0, 917539, 5, 0, 917540, 5, 0, 917541, 5, 0, 917542, 5, 0, 917543, 5, 0, 917544, 5, 0, 917555, 3, 131072, 917556, 3, 1, 917557, 3, 3, 917563, 3, 0, 917564, 3, 1, 917565, 3, 1, 917566, 3, 1, 983047, 3, 65536, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0, 983066, 5, 0, 983067, 5, 0, 983068, 5, 0, 983069, 5, 0, 983070, 5, 0, 983071, 5, 0, 983072, 5, 0, 983073, 5, 0, 983074, 5, 0, 983075, 5, 0, 983076, 5, 0, 983077, 5, 0, 983078, 5, 0, 983079, 5, 0, 983080, 5, 0, 983093, 3, 131072, 983094, 3, 131073, 983095, 3, 3, 983097, 3, 0, 983098, 3, 131073, 983099, 3, 131074, 1048583, 3, 65536, 1048585, 5, 0, 1048586, 5, 0, 1048587, 5, 0, 1048588, 5, 0, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1048601, 5, 0, 1048602, 5, 0, 1048603, 5, 0, 1048604, 5, 0, 1048605, 5, 0, 1048606, 5, 0, 1048607, 5, 0, 1048608, 5, 0, 1048609, 5, 0, 1048610, 5, 0, 1048611, 5, 0, 1048612, 5, 0, 1048613, 5, 0, 1048614, 5, 0, 1048615, 5, 0, 1048616, 5, 0, 1048631, 3, 65537, 1048632, 3, 1, 1048633, 3, 65539, 1114116, 3, 0, 1114117, 3, 131073, 1114118, 3, 131073, 1114119, 3, 2, 1114120, 3, 1, 1114121, 5, 0, 1114122, 5, 0, 1114123, 5, 0, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1114138, 5, 0, 1114139, 5, 0, 1114140, 5, 0, 1114141, 5, 0, 1114142, 5, 0, 1114143, 5, 0, 1114144, 5, 0, 1114145, 5, 0, 1114146, 5, 0, 1114147, 5, 0, 1114148, 5, 0, 1114149, 5, 0, 1114150, 5, 0, 1114151, 5, 0, 1114152, 5, 0, 1114153, 3, 1, 1114154, 3, 3, 1114165, 3, 0, 1114166, 3, 131073, 1114167, 3, 131074, 1114169, 3, 65536, 1245181, 3, 0, 1245182, 3, 131073, 1245183, 3, 131073, 1179648, 3, 131073, 1179649, 3, 3, 1179651, 3, 0, 1179652, 3, 131074, 1179657, 5, 0, 1179658, 5, 0, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179668, 5, 0, 1179669, 5, 0, 1179670, 5, 0, 1179671, 5, 0, 1179672, 5, 0, 1179673, 5, 0, 1179674, 5, 0, 1179675, 5, 0, 1179676, 5, 0, 1179677, 5, 0, 1179678, 5, 0, 1179679, 5, 0, 1179680, 5, 0, 1179681, 5, 0, 1179682, 5, 0, 1179683, 5, 0, 1179684, 5, 0, 1179685, 5, 0, 1179686, 5, 0, 1179687, 5, 0, 1179688, 5, 0, 1179690, 3, 131072, 1179691, 3, 131073, 1179692, 3, 131073, 1179693, 3, 131073, 1179694, 3, 1, 1179695, 3, 1, 1179696, 3, 1, 1179697, 3, 131073, 1179698, 3, 131073, 1179699, 3, 1, 1179700, 3, 131073, 1179701, 3, 131074, 1179705, 3, 65536, 1310716, 3, 0, 1310717, 3, 131074, 1245185, 3, 131072, 1245186, 3, 1, 1245187, 3, 131074, 1245193, 5, 0, 1245194, 5, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0, 1245212, 5, 0, 1245213, 5, 0, 1245214, 5, 0, 1245215, 5, 0, 1245216, 5, 0, 1245217, 5, 0, 1245218, 5, 0, 1245219, 5, 0, 1245220, 5, 0, 1245221, 5, 0, 1245222, 5, 0, 1245223, 5, 0, 1245224, 5, 0, 1245225, 2, 0, 1245226, 2, 1, 1245227, 2, 2, 1245228, 2, 2, 1245229, 2, 2, 1245230, 2, 1, 1245231, 2, 1, 1245232, 2, 1, 1245233, 2, 2, 1245234, 2, 2, 1245235, 2, 2, 1245236, 2, 3, 1245241, 3, 131072, 1245242, 3, 3, 1376248, 3, 1, 1376249, 3, 131073, 1376250, 3, 1, 1376251, 3, 131073, 1376252, 3, 131074, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 5, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 5, 0, 1310742, 5, 0, 1310743, 5, 0, 1310744, 5, 0, 1310745, 5, 0, 1310746, 5, 0, 1310747, 5, 0, 1310748, 5, 0, 1310749, 5, 0, 1310750, 5, 0, 1310751, 5, 0, 1310752, 5, 0, 1310753, 5, 0, 1310754, 5, 0, 1310755, 5, 0, 1310756, 5, 0, 1310757, 5, 0, 1310758, 5, 0, 1310759, 5, 0, 1310760, 5, 0, 1310761, 2, 65539, 1310772, 2, 131072, 1310773, 2, 1, 1310774, 2, 2, 1310775, 2, 3, 1310778, 3, 131072, 1310779, 3, 131073, 1310780, 3, 3, 1376265, 5, 0, 1376266, 5, 0, 1376267, 5, 0, 1376268, 5, 0, 1376269, 5, 0, 1376270, 5, 0, 1376271, 5, 0, 1376272, 5, 0, 1376273, 5, 0, 1376274, 5, 0, 1376275, 5, 0, 1376276, 5, 0, 1376277, 5, 0, 1376278, 5, 0, 1376279, 5, 0, 1376280, 5, 0, 1376281, 5, 0, 1376282, 5, 0, 1376283, 5, 0, 1376284, 5, 0, 1376285, 5, 0, 1376286, 5, 0, 1376287, 5, 0, 1376288, 5, 0, 1376289, 5, 0, 1376290, 5, 0, 1376291, 5, 0, 1376292, 5, 0, 1376293, 5, 0, 1376294, 5, 0, 1376295, 5, 0, 1376296, 5, 0, 1376297, 2, 131072, 1376298, 2, 3, 1376311, 2, 131072, 1376312, 2, 3, 1376316, 3, 1, 1441801, 5, 0, 1441802, 5, 0, 1441803, 5, 0, 1441804, 5, 0, 1441805, 5, 0, 1441806, 5, 0, 1441807, 5, 0, 1441808, 5, 0, 1441809, 5, 0, 1441810, 5, 0, 1441811, 5, 0, 1441812, 5, 0, 1441813, 5, 0, 1441814, 5, 0, 1441815, 5, 0, 1441816, 5, 0, 1441817, 5, 0, 1441818, 5, 0, 1441819, 5, 0, 1441820, 5, 0, 1441821, 5, 0, 1441822, 5, 0, 1441823, 5, 0, 1441824, 5, 0, 1441825, 5, 0, 1441826, 5, 0, 1441827, 5, 0, 1441828, 5, 0, 1441829, 5, 0, 1441830, 5, 0, 1441831, 5, 0, 1441832, 5, 0, 1441834, 2, 131072, 1441835, 2, 2, 1441836, 2, 2, 1441837, 2, 2, 1441838, 2, 2, 1441839, 2, 2, 1441840, 2, 1, 1441841, 2, 1, 1441842, 2, 1, 1441843, 2, 2, 1441844, 2, 2, 1441845, 2, 3, 1441848, 2, 65536, 1441849, 2, 2, 1441850, 2, 3, 1507337, 5, 0, 1507338, 5, 0, 1507339, 5, 0, 1507340, 5, 0, 1507341, 5, 0, 1507342, 5, 0, 1507343, 5, 0, 1507344, 5, 0, 1507345, 5, 0, 1507346, 5, 0, 1507347, 5, 0, 1507348, 5, 0, 1507349, 5, 0, 1507350, 5, 0, 1507351, 5, 0, 1507352, 5, 0, 1507353, 5, 0, 1507354, 5, 0, 1507355, 5, 0, 1507356, 5, 0, 1507357, 5, 0, 1507358, 5, 0, 1507359, 5, 0, 1507360, 5, 0, 1507361, 5, 0, 1507362, 5, 0, 1507363, 5, 0, 1507364, 5, 0, 1507365, 5, 0, 1507366, 5, 0, 1507367, 5, 0, 1507368, 5, 0, 1507381, 2, 131072, 1507382, 2, 2, 1507383, 2, 1, 1507384, 2, 131074, 1507386, 2, 131072, 1507387, 2, 3, 1572873, 5, 0, 1572874, 5, 0, 1572875, 5, 0, 1572876, 5, 0, 1572877, 5, 0, 1572878, 5, 0, 1572879, 5, 0, 1572880, 5, 0, 1572881, 5, 0, 1572882, 5, 0, 1572883, 5, 0, 1572884, 5, 0, 1572885, 5, 0, 1572886, 5, 0, 1572887, 5, 0, 1572888, 5, 0, 1572889, 5, 0, 1572890, 5, 0, 1572891, 5, 0, 1572892, 5, 0, 1572893, 5, 0, 1572894, 5, 0, 1572895, 5, 0, 1572896, 5, 0, 1572897, 5, 0, 1572898, 5, 0, 1572899, 5, 0, 1572900, 5, 0, 1572901, 5, 0, 1572902, 5, 0, 1572903, 5, 0, 1572904, 5, 0, 1572915, 3, 0, 1572916, 3, 1, 1572917, 3, 131073, 1572918, 3, 1, 1572919, 3, 3, 1572923, 2, 65539, 1572925, 2, 65539, 1638409, 5, 0, 1638410, 5, 0, 1638411, 5, 0, 1638412, 5, 0, 1638413, 5, 0, 1638414, 5, 0, 1638415, 5, 0, 1638416, 5, 0, 1638417, 5, 0, 1638418, 5, 0, 1638419, 5, 0, 1638420, 5, 0, 1638421, 5, 0, 1638422, 5, 0, 1638423, 5, 0, 1638424, 5, 0, 1638425, 5, 0, 1638426, 5, 0, 1638427, 5, 0, 1638428, 5, 0, 1638429, 5, 0, 1638430, 5, 0, 1638431, 5, 0, 1638432, 5, 0, 1638433, 5, 0, 1638434, 5, 0, 1638435, 5, 0, 1638436, 5, 0, 1638437, 5, 0, 1638438, 5, 0, 1638439, 5, 0, 1638440, 5, 0, 1638449, 3, 0, 1638450, 3, 131073, 1638451, 3, 131074, 1638455, 3, 131072, 1638456, 3, 3, 1703945, 5, 0, 1703946, 5, 0, 1703947, 5, 0, 1703948, 5, 0, 1703949, 5, 0, 1703950, 5, 0, 1703951, 5, 0, 1703952, 5, 0, 1703953, 5, 0, 1703954, 5, 0, 1703955, 5, 0, 1703956, 5, 0, 1703957, 5, 0, 1703958, 5, 0, 1703959, 5, 0, 1703960, 5, 0, 1703961, 5, 0, 1703962, 5, 0, 1703963, 5, 0, 1703964, 5, 0, 1703965, 5, 0, 1703966, 5, 0, 1703967, 5, 0, 1703968, 5, 0, 1703969, 5, 0, 1703970, 5, 0, 1703971, 5, 0, 1703972, 5, 0, 1703973, 5, 0, 1703974, 5, 0, 1703975, 5, 0, 1703976, 5, 0, 1703977, 3, 1, 1703978, 3, 131073, 1703979, 3, 1, 1703980, 3, 131073, 1703981, 3, 131073, 1703982, 3, 1, 1703983, 3, 131073, 1703984, 3, 65538, 1703985, 3, 131074, 1703992, 3, 131072, 1703993, 3, 3, 1769481, 5, 0, 1769482, 4, 0, 1769484, 5, 0, 1769485, 5, 0, 1769486, 5, 0, 1769487, 5, 0, 1769488, 5, 0, 1769489, 5, 0, 1769490, 5, 0, 1769491, 5, 0, 1769492, 5, 0, 1769493, 5, 0, 1769494, 5, 0, 1769495, 5, 0, 1769496, 5, 0, 1769497, 5, 0, 1769498, 5, 0, 1769499, 5, 0, 1769500, 5, 0, 1769501, 5, 0, 1769502, 5, 0, 1769503, 5, 0, 1769504, 5, 0, 1769505, 5, 0, 1769506, 5, 0, 1769507, 5, 0, 1769508, 5, 0, 1769509, 5, 0, 1769510, 4, 0, 1769512, 5, 0, 1769520, 3, 65536, 1769529, 3, 131072, 1769530, 3, 1, 1835017, 5, 0, 1835020, 5, 0, 1835021, 5, 0, 1835022, 5, 0, 1835023, 5, 0, 1835024, 5, 0, 1835025, 5, 0, 1835026, 5, 0, 1835027, 5, 0, 1835028, 5, 0, 1835029, 5, 0, 1835030, 5, 0, 1835031, 5, 0, 1835032, 5, 0, 1835033, 5, 0, 1835034, 5, 0, 1835035, 5, 0, 1835036, 5, 0, 1835037, 5, 0, 1835038, 5, 0, 1835039, 5, 0, 1835040, 5, 0, 1835041, 5, 0, 1835042, 5, 0, 1835043, 5, 0, 1835044, 5, 0, 1835045, 5, 0, 1835048, 5, 0, 1835056, 3, 65536, 1900553, 5, 0, 1900554, 5, 1, 1900555, 5, 1, 1900556, 5, 0, 1900557, 5, 0, 1900558, 5, 0, 1900559, 5, 0, 1900560, 5, 0, 1900561, 5, 0, 1900562, 5, 0, 1900563, 5, 0, 1900564, 5, 0, 1900565, 5, 0, 1900566, 5, 0, 1900567, 5, 0, 1900568, 5, 0, 1900569, 5, 0, 1900570, 5, 0, 1900571, 5, 0, 1900572, 5, 0, 1900573, 5, 0, 1900574, 5, 0, 1900575, 5, 0, 1900576, 5, 0, 1900577, 5, 0, 1900578, 5, 0, 1900579, 5, 0, 1900580, 5, 0, 1900581, 5, 0, 1900582, 5, 1, 1900583, 5, 1, 1900584, 5, 0, 1900592, 3, 65536, 1966104, 2, 65539, 1966107, 2, 65539, 1966128, 3, 65536, 2031640, 2, 65539, 2031643, 2, 65539, 2031664, 3, 65536, 2097176, 2, 65539, 2097179, 2, 65539, 2097200, 3, 65536, 2162712, 2, 65539, 2162715, 2, 65539, 2162736, 3, 65536, 2228248, 2, 65539, 2228251, 2, 131072, 2228252, 2, 3, 2228272, 3, 65536, 2293784, 2, 65539, 2293788, 2, 65539, 2293808, 3, 65536, 2359320, 2, 65539, 2359324, 2, 65539, 2359344, 3, 65536, 2424855, 2, 0, 2424856, 2, 131074, 2424860, 2, 65539, 2424880, 3, 1, 2490391, 2, 65539, 2490396, 2, 65539, 2555926, 2, 0, 2555927, 2, 131074, 2555932, 2, 65539, 2621462, 2, 65539, 2621468, 2, 65539, 2686997, 2, 0, 2686998, 2, 131074, 2687004, 2, 131072, 2687005, 2, 3, 2752532, 2, 0, 2752533, 2, 131074, 2752541, 2, 131072, 2752542, 2, 3, 2818068, 2, 65539, 2818078, 2, 131072, 2818079, 2, 3, 2883603, 2, 0, 2883604, 2, 131074, 2883615, 2, 131072, 2883616, 2, 3, 2949139, 2, 65539, 2949152, 2, 131072, 2949153, 2, 3, 3014674, 2, 0, 3014675, 2, 131074, 3014689, 2, 65539, 3080210, 2, 65539 )

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="air_spawn_1" parent="cam" instance=ExtResource( 7 )]
position = Vector2( -416.703, -20.526 )

[node name="air_spawn_2" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 2.06299, -283.727 )

[node name="air_spawn_3" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 531.828, 7.224 )

[node name="air_spawn_4" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 12.154, 367.968 )

[node name="soundmaker" parent="cam" instance=ExtResource( 5 )]
position = Vector2( 0, 28 )

[node name="spawn_1" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 100 )

[node name="spawn_2" parent="." instance=ExtResource( 6 )]
position = Vector2( 544, 100 )

[node name="spawn_3" parent="." instance=ExtResource( 6 )]
position = Vector2( 544, 388 )

[node name="spawn_4" parent="." instance=ExtResource( 6 )]
position = Vector2( 96, 388 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 240 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 480, 136 )
collision_layer = 8
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( 176, -8, 176, 344, -336, 344, -336, -8, -336, -80, -400, -80, -404, 416, 248, 416, 248, -80, -336, -80, -336, -8 )

[node name="Spawn" type="Timer" parent="."]
autostart = true

[node name="waiting" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="waiting" to="." method="_on_waiting_timeout"]
